# django-plugin-blog

./: README.md  pyproject.toml
.github/workflows/: publish.yml
django_plugin_blog/: __init__.py  admin.py  apps.py  models.py  views.py
django_plugin_blog/migrations/: 0001_initial.py
django_plugin_blog/templates/django_plugin_blog/: archive.html  base.html  entry.html  index.html  tag.html  year.html
tests/: test_django_plugin_blog.py
