[project]
name = "django-plugin-blog"
version = "0.1"
description = "A simple blog implemented as a DJP plugin"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "django",
    "Markdown",
    "djp>=0.1",
]

[project.urls]
Homepage = "https://github.com/simonw/django-plugin-blog"
Changelog = "https://github.com/simonw/django-plugin-blog/releases"
Issues = "https://github.com/simonw/django-plugin-blog/issues"
CI = "https://github.com/simonw/django-plugin-blog/actions"

[project.entry-points.djp]
django_plugin_blog = "django_plugin_blog"

[project.optional-dependencies]
test = ["pytest", "pytest-django"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
pythonpath = ["."]
